--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,9 @@
     <title>Photography</title>
 
     <link rel="stylesheet" href="./css/style.css"/>
-
+	<link href="https://fonts.googleapis.com/css?family=Lora&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+	      rel="stylesheet">
 </head>
 <body>
 
