Art Gallery Added

--- a/public/index.html
+++ b/public/index.html
@@ -19,14 +19,43 @@
     <nav class="menu">
       <button id="">About</button>
       <button id="manual">Manual</button>
+      <button id="art">Art</button>
     </nav>
-    <div id="homeImg"><img src="photos/op-intruder-logo.png" alt= "logo"></div>
+    <div id="homeImg"><img src="manual/op-intruder-logo.png" alt= "logo"></div>
     <div  class= "container">
-      <div class="landscape manual"><img src="photos/manual1.png" alt= "Ontological Shock"></div>
-      <div class="landscape manual"><img src="photos/manual2.png" alt= "Abduction/CE5 Sigil"></div>
-      <div class="landscape manual"><img src="photos/manual3.png" alt= "You Are Not Alone"></div>
-      <div class="landscape manual"><img src="photos/manual4.png" alt= "Vajra Up The Masses"></div>
-      <div class="landscape manual"><img src="photos/manual5.png" alt= "Yggdrasil Bindrune"></div>
+      <div class="landscape manual"><img src="manual/ce5-manual.png" alt="Abduction/CE5 Sigil"></div>
+      <div class="landscape manual"><img src="manual/ontological-shock-manual.png" alt= "Ontological Shock" ></div>
+      <div class="landscape manual"><img src="manual/not-alone-manual.png" alt= "You Are Not Alone"></div>
+      <div class="landscape manual"><img src="manual/vajra-manual.png" alt= "Vajra Up The Masses"></div>
+      <div class="landscape manual"><img src="manual/Yggdrasil-manual.png" alt= "Yggdrasil Bindrune"></div>
+
+    <div class="portrait art"><img src="art/quayin-al-kindi-intruder-abduction.jpg" alt="Intruder Abruction by Quayin Al Kindi"></div>
+    <div class="portrait art"><img src="art/Akenisoxuz-XI.jpg" alt="Akenisoxuz-XI"></div>
+    <div class="portrait art"><img src="art/ce5-alien.jpg" alt="CE5 Alien"></div>
+    <div class="portrait art"><img src="art/dkmu.jpg" alt="DKMU"></div>
+    <div class="portrait art"><img src="art/easter.jpg" alt="OpIntruder Easter by Agent V"></div>
+    <div class="portrait art"><img src="art/ce5-target.png" alt="CE5 target"></div>
+    <div class="portrait art"><img src="art/ufo.jpg" alt="UFO"></div>
+    <div class="portrait art"><img src="art/drawing01.jpg" alt="Drawing 01"></div>
+    <div class="portrait art"><img src="art/Tom-Duke.jpg" alt="CE5 by Tom Duke"></div>
+    <div class="portrait art"><img src="art/eggs.jpg" alt="Easter Eggs by Agent V"></div>
+    <div class="portrait art"><img src="art/quayin-al-kindi-intruder-ontological-shock.jpg" alt="Ontological Shock by Quayin Al Kindi"></div>
+    <div class="portrait art"><img src="art/VW-untitled.jpg" alt="VW untitled"></div>
+    <div class="portrait art"><img src="art/3d-man.jpg" alt="3D Man"></div>
+    <div class="portrait art"><img src="art/holy-guardian-alien.jpg" alt="Holy Guardian Alien by Agent V"></div>
+    <div class="landscape art"><img src="art/insectoid-swarm.jpg" alt="Insectiod Swarm"></div>
+    <div class="landscape art"><img src="art/not-alone.jpg" alt="Not Alone"></div>
+    <div class="landscape art"><img src="art/SpuddyGalati-GodWin.jpg" alt="Godwin by Spuddy Galati"></div>
+    <div class="landscape art"><img src="art/olamolamari.png" alt="Olamolamari by Agent V"></div>
+    <div class="landscape art"><img src="art/drawing02.jpg" alt="Drawing 2"></div>
+    <div class="landscape art"><img src="art/Mark-Allen.jpg" alt="Mark Allen"></div>
+    <div class="landscape art"><img src="art/metaintruder_by_operationintruder-dayfb8b.gif" alt="MetaIntruder"></div>
+    <div class="landscape art"><img src="art/drawing03.jpg" alt="Drawing 03"></div>
+    <div class="landscape art"><img src="art/padlocks.jpg" alt="Padlocks by Agent V"></div>
+    <div class="landscape art"><img src="art/target.jpg" alt="Target"></div>
+    <div class="landscape art"><img src="art/VW-InDwelling.jpg" alt=""></div>
+    <div class="landscape art"><img src="art/IanWalker-crop-circle.jpg" alt="Crop Circle by Ian Walker"></div>
+    <div class="landscape art"><img src="art/AgentRichardCincohousMilhous.jpg" alt="Agent Richard Cincohous Milhous"></div>
     </div>
   </body>
 </html>
