Meme and friends galleries added

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,8 @@
       <button id="">About</button>
       <button id="manual">Manual</button>
       <button id="art">Art</button>
+      <button id="memes">Memes</button>
+      <button id="friends">Friends</button>
     </nav>
     <div id="homeImg"><img src="manual/op-intruder-logo.png" alt= "logo"></div>
     <div  class= "container">
@@ -29,13 +31,13 @@
       <div class="landscape manual"><img src="manual/vajra-manual.png" alt= "Vajra Up The Masses"></div>
       <div class="landscape manual"><img src="manual/Yggdrasil-manual.png" alt= "Yggdrasil Bindrune"></div>
 
-    <div class="portrait art"><img src="art/quayin-al-kindi-intruder-abduction.jpg" alt="Intruder Abruction by Quayin Al Kindi"></div>
+    <div class="big art"><img src="art/quayin-al-kindi-intruder-abduction.jpg" alt="Intruder Abruction by Quayin Al Kindi"></div>
     <div class="portrait art"><img src="art/Akenisoxuz-XI.jpg" alt="Akenisoxuz-XI"></div>
     <div class="portrait art"><img src="art/ce5-alien.jpg" alt="CE5 Alien"></div>
     <div class="portrait art"><img src="art/dkmu.jpg" alt="DKMU"></div>
     <div class="portrait art"><img src="art/easter.jpg" alt="OpIntruder Easter by Agent V"></div>
     <div class="portrait art"><img src="art/ce5-target.png" alt="CE5 target"></div>
-    <div class="portrait art"><img src="art/ufo.jpg" alt="UFO"></div>
+    <div class="big art"><img src="art/ufo.jpg" alt="UFO"></div>
     <div class="portrait art"><img src="art/drawing01.jpg" alt="Drawing 01"></div>
     <div class="portrait art"><img src="art/Tom-Duke.jpg" alt="CE5 by Tom Duke"></div>
     <div class="portrait art"><img src="art/eggs.jpg" alt="Easter Eggs by Agent V"></div>
@@ -44,18 +46,79 @@
     <div class="portrait art"><img src="art/3d-man.jpg" alt="3D Man"></div>
     <div class="portrait art"><img src="art/holy-guardian-alien.jpg" alt="Holy Guardian Alien by Agent V"></div>
     <div class="landscape art"><img src="art/insectoid-swarm.jpg" alt="Insectiod Swarm"></div>
-    <div class="landscape art"><img src="art/not-alone.jpg" alt="Not Alone"></div>
+    <div class="big art"><img src="art/not-alone.jpg" alt="Not Alone"></div>
     <div class="landscape art"><img src="art/SpuddyGalati-GodWin.jpg" alt="Godwin by Spuddy Galati"></div>
     <div class="landscape art"><img src="art/olamolamari.png" alt="Olamolamari by Agent V"></div>
     <div class="landscape art"><img src="art/drawing02.jpg" alt="Drawing 2"></div>
     <div class="landscape art"><img src="art/Mark-Allen.jpg" alt="Mark Allen"></div>
-    <div class="landscape art"><img src="art/metaintruder_by_operationintruder-dayfb8b.gif" alt="MetaIntruder"></div>
+    <div class="big art"><img src="art/metaintruder_by_operationintruder-dayfb8b.gif" alt="MetaIntruder"></div>
     <div class="landscape art"><img src="art/drawing03.jpg" alt="Drawing 03"></div>
     <div class="landscape art"><img src="art/padlocks.jpg" alt="Padlocks by Agent V"></div>
-    <div class="landscape art"><img src="art/target.jpg" alt="Target"></div>
+    <div class="big art"><img src="art/target.jpg" alt="Target"></div>
     <div class="landscape art"><img src="art/VW-InDwelling.jpg" alt=""></div>
     <div class="landscape art"><img src="art/IanWalker-crop-circle.jpg" alt="Crop Circle by Ian Walker"></div>
     <div class="landscape art"><img src="art/AgentRichardCincohousMilhous.jpg" alt="Agent Richard Cincohous Milhous"></div>
+
+    <div class="big memes"><img src="memes/3D-man.jpeg" alt="3D Man"></div>
+    <div class="portrait memes"><img src="memes/anal-probe.png" alt="Anal Probe"></div>
+    <div class="portrait memes"><img src="memes/entering-reality.jpg" alt="Entering Reality"></div>
+    <div class="portrait memes"><img src="memes/Get-abducted.jpg" alt="Meditate and get abducted"></div>
+    <div class="portrait memes"><img src="memes/Grow-up.jpeg" alt="Grow Up"></div>
+    <div class="big memes"><img src="memes/How-it-was-written.jpg" alt="Exactly how it was written..."></div>
+    <div class="portrait memes"><img src="memes/I-want-to-believe.jpg" alt="I want to believe"></div>
+    <div class="portrait memes"><img src="memes/keep_tagging.png" alt="Keep Tagging..."></div>
+    <div class="portrait memes"><img src="memes/meet-me.jpg" alt="Meet me at OpIntruder cave"></div>
+    <div class="portrait memes"><img src="memes/million-likes.png" alt="Million likes on Facebook"></div>
+    <div class="portrait memes"><img src="memes/propaganda.jpeg" alt="Follow yout Inner Alien"></div>
+    <div class="big memes"><img src="memes/Seti.jpg" alt="Seti tries McKenna Strategy"></div>
+    <div class="portrait memes"><img src="memes/vajra-alien-girl-sweet-dreams.jpg" alt="Varja Alien"></div>
+    <div class="portrait memes"><img src="memes/xenu.jpg" alt="Xenu"></div>
+    <div class="portrait memes"><img src="memes/Vader.jpg" alt="Ayahausca Vader"></div>
+    <div class="landscape memes"><img src="memes/significant-other.jpg" alt="Significant Other"></div>
+    <div class="landscape memes"><img src="memes/tangible-evidences.jpeg" alt="Tangible Evidences"></div>
+    <div class="big memes"><img src="memes/goatsy.jpeg" alt="Goatsy"></div>
+    <div class="landscape memes"><img src="memes/confirm-nor-deny-illuminati.png" alt="We can neither confirm nor deny Illuminati involvement in Operation Intruder"></div>
+    <div class="landscape memes"><img src="memes/Bush-Chakras.jpg" alt="George Bush: yuor chakras are aligned now"></div>
+    <div class="landscape memes"><img src="memes/ascended-master.jpg" alt="You can be an ascended master too!"></div>
+    <div class="big memes"><img src="memes/arrival-take-our-leader.png" alt="Arrival: I will take you to our leader if you take him with you."></div>
+    <div class="landscape memes"><img src="memes/ufo-cults.jpg" alt="UFO cults may practice  a form of hypnotism or brain-washing!"></div>
+    <div class="landscape memes"><img src="memes/thought-police.jpg" alt="Though Police: We watch you through your smartphone and you're pretty boring"></div>
+    <div class="landscape memes"><img src="memes/mork-fonzie-keep-your-cool.png" alt="Mork; Keep your cool when Operation Intruder calls!"></div>
+    <div class="landscape memes"><img src="memes/ganesha-for-grand-nagus-banker-sigil.png" alt="Ganesha for Grand Nagus: He has the lobes!"></div>
+    <div class="landscape memes"><img src="memes/Get-In-the-van.jpg" alt="no time to explain, get in the van"></div>
+    <div class="landscape memes"><img src="memes/Faceless.jpg" alt="Surveillance cameras everywhere, Faces nowhere. Faceless"></div>
+    <div class="big memes"><img src="memes/ThirdEyeOpening.jpg" alt="X-files: Third Eye Opening Operation"></div>
+    <div class="landscape memes"><img src="memes/mugabe-fall.jpg" alt="Mugabe Fall"></div>
+
+    <div class="portrait friends"><img src="friends/SahrawiPeople.jpg" alt="We Stand for Sahrawi People"></div>
+    <div class="portrait friends"><img src="friends/AnarkiaBoladona.png" alt="Anarkia Boladona: Solidarity with Brazilian Women"></div>
+    <div class="portrait friends"><img src="friends/Glenn_Greenwald.png" alt="Glenn_Greenwald"></div>
+    <div class="landscape friends"><img src="friends/tanzania-lgbt.png" alt="tanzania lgbt"></div>
+    <div class="big friends"><img src="friends/Green-Wave.jpg" alt="Green Wave"></div>
+    <div class="landscape friends"><img src="friends/2019-07-21-russia-moscow-protests.jpg" alt="Russia Moscow Protest 2019"></div>
+    <div class="landscape friends"><img src="friends/barrettbrown-you-are-not-alone.png" alt="Barrett Brown"></div>
+    <div class="portrait friends"><img src="friends/brazil-lgbt.png" alt="LGBT Brazil"></div>
+    <div class="landscape friends"><img src="friends/british-muslims.png" alt="British Muslims"></div>
+    <div class="landscape friends"><img src="friends/chelsea-manning.jpg" alt="Chelsea Manning"></div>
+    <div class="landscape friends"><img src="friends/CaroleCadwalladr.png" alt="Carole Cadwalladr"></div>
+    <div class="big friends"><img src="friends/GretaThunberg.jpg" alt="Greta Thunberg"></div>
+    <div class="landscape friends"><img src="friends/dakota-access-protest-v2.jpg" alt="dakota access pipeline protest."></div>
+    <div class="landscape friends"><img src="friends/orlando-shooting.jpg" alt="orlando shooting"></div>
+    <div class="landscape friends"><img src="friends/refugee-boat2.png" alt="refugee boat"></div>
+    <div class="landscape friends"><img src="friends/snowden.png" alt="Edward Snowden"></div>
+    <div class="landscape friends"><img src="friends/LGBTPoland.png" alt="LGBT Poland"></div>
+    <div class="landscape friends"><img src="friends/sami.png" alt="Sami People"></div>
+    <div class="big friends"><img src="friends/Brazil.jpg" alt="Brazil"></div>
+    <div class="landscape friends"><img src="friends/refugee-camp.png" alt="refugee camp"></div>
+    <div class="landscape friends"><img src="friends/victims-pulse-orlando-shooting.jpg" alt="Orlando shooting victims"></div>
+    <div class="landscape friends"><img src="friends/pax-ritual-for-syria.jpg" alt="Pax ritual for Syria"></div>
+    <div class="landscape friends"><img src="friends/refugee-protest.jpg" alt="refugee protest"></div>
+    <div class="landscape friends"><img src="friends/reality-winner.jpg" alt="Reality Leigh Winner"></div>
+    <div class="landscape friends"><img src="friends/roma.png" alt="Roma People"></div>
+    <div class="big friends"><img src="friends/chelsea-resists.jpg" alt="Chelsea Resists"></div>
+    <div class="landscape friends"><img src="friends/refugees.png" alt="Refugees"></div>
+    <div class="landscape friends"><img src="friends/Hong_Kong_anti-extradition_bill_protest.jpg" alt="Hong Kong anti extradition bill protest"></div>
+    <div class="landscape friends"><img src="friends/HandsOffAmazon.png" alt="Hands Off Amazon"></div>
     </div>
   </body>
 </html>
