Added Target gallery and renamed friends to assist

--- a/public/index.html
+++ b/public/index.html
@@ -17,11 +17,13 @@
       <h1>Operation Intruder</h1>
     </header>
     <nav class="menu">
-      <button id="">About</button>
+      <button id="home">About</button>
       <button id="manual">Manual</button>
+      <button id="assist">Assist</button>
+      <button id="target">Target</button>
       <button id="art">Art</button>
       <button id="memes">Memes</button>
-      <button id="friends">Friends</button>
+     
     </nav>
     <div id="homeImg"><img src="manual/op-intruder-logo.png" alt= "logo"></div>
     <div  class= "container">
@@ -60,16 +62,11 @@
     <div class="landscape art"><img src="art/AgentRichardCincohousMilhous.jpg" alt="Agent Richard Cincohous Milhous"></div>
 
     <div class="big memes"><img src="memes/3D-man.jpeg" alt="3D Man"></div>
-    <div class="portrait memes"><img src="memes/anal-probe.png" alt="Anal Probe"></div>
-    <div class="portrait memes"><img src="memes/entering-reality.jpg" alt="Entering Reality"></div>
     <div class="portrait memes"><img src="memes/Get-abducted.jpg" alt="Meditate and get abducted"></div>
     <div class="portrait memes"><img src="memes/Grow-up.jpeg" alt="Grow Up"></div>
     <div class="big memes"><img src="memes/How-it-was-written.jpg" alt="Exactly how it was written..."></div>
     <div class="portrait memes"><img src="memes/I-want-to-believe.jpg" alt="I want to believe"></div>
     <div class="portrait memes"><img src="memes/keep_tagging.png" alt="Keep Tagging..."></div>
-    <div class="portrait memes"><img src="memes/meet-me.jpg" alt="Meet me at OpIntruder cave"></div>
-    <div class="portrait memes"><img src="memes/million-likes.png" alt="Million likes on Facebook"></div>
-    <div class="portrait memes"><img src="memes/propaganda.jpeg" alt="Follow yout Inner Alien"></div>
     <div class="big memes"><img src="memes/Seti.jpg" alt="Seti tries McKenna Strategy"></div>
     <div class="portrait memes"><img src="memes/vajra-alien-girl-sweet-dreams.jpg" alt="Varja Alien"></div>
     <div class="portrait memes"><img src="memes/xenu.jpg" alt="Xenu"></div>
@@ -89,36 +86,72 @@
     <div class="landscape memes"><img src="memes/Faceless.jpg" alt="Surveillance cameras everywhere, Faces nowhere. Faceless"></div>
     <div class="big memes"><img src="memes/ThirdEyeOpening.jpg" alt="X-files: Third Eye Opening Operation"></div>
     <div class="landscape memes"><img src="memes/mugabe-fall.jpg" alt="Mugabe Fall"></div>
+    <div class="portrait memes"><img src="memes/anal-probe.png" alt="Anal Probe"></div>
+    <div class="portrait memes"><img src="memes/entering-reality.jpg" alt="Entering Reality"></div>
+    <div class="portrait memes"><img src="memes/meet-me.jpg" alt="Meet me at OpIntruder cave"></div>
+    <div class="portrait memes"><img src="memes/million-likes.png" alt="Million likes on Facebook"></div>
+    <div class="portrait memes"><img src="memes/propaganda.jpeg" alt="Follow yout Inner Alien"></div>
 
-    <div class="portrait friends"><img src="friends/SahrawiPeople.jpg" alt="We Stand for Sahrawi People"></div>
-    <div class="portrait friends"><img src="friends/AnarkiaBoladona.png" alt="Anarkia Boladona: Solidarity with Brazilian Women"></div>
-    <div class="portrait friends"><img src="friends/Glenn_Greenwald.png" alt="Glenn_Greenwald"></div>
-    <div class="landscape friends"><img src="friends/tanzania-lgbt.png" alt="tanzania lgbt"></div>
-    <div class="big friends"><img src="friends/Green-Wave.jpg" alt="Green Wave"></div>
-    <div class="landscape friends"><img src="friends/2019-07-21-russia-moscow-protests.jpg" alt="Russia Moscow Protest 2019"></div>
-    <div class="landscape friends"><img src="friends/barrettbrown-you-are-not-alone.png" alt="Barrett Brown"></div>
-    <div class="portrait friends"><img src="friends/brazil-lgbt.png" alt="LGBT Brazil"></div>
-    <div class="landscape friends"><img src="friends/british-muslims.png" alt="British Muslims"></div>
-    <div class="landscape friends"><img src="friends/chelsea-manning.jpg" alt="Chelsea Manning"></div>
-    <div class="landscape friends"><img src="friends/CaroleCadwalladr.png" alt="Carole Cadwalladr"></div>
-    <div class="big friends"><img src="friends/GretaThunberg.jpg" alt="Greta Thunberg"></div>
-    <div class="landscape friends"><img src="friends/dakota-access-protest-v2.jpg" alt="dakota access pipeline protest."></div>
-    <div class="landscape friends"><img src="friends/orlando-shooting.jpg" alt="orlando shooting"></div>
-    <div class="landscape friends"><img src="friends/refugee-boat2.png" alt="refugee boat"></div>
-    <div class="landscape friends"><img src="friends/snowden.png" alt="Edward Snowden"></div>
-    <div class="landscape friends"><img src="friends/LGBTPoland.png" alt="LGBT Poland"></div>
-    <div class="landscape friends"><img src="friends/sami.png" alt="Sami People"></div>
-    <div class="big friends"><img src="friends/Brazil.jpg" alt="Brazil"></div>
-    <div class="landscape friends"><img src="friends/refugee-camp.png" alt="refugee camp"></div>
-    <div class="landscape friends"><img src="friends/victims-pulse-orlando-shooting.jpg" alt="Orlando shooting victims"></div>
-    <div class="landscape friends"><img src="friends/pax-ritual-for-syria.jpg" alt="Pax ritual for Syria"></div>
-    <div class="landscape friends"><img src="friends/refugee-protest.jpg" alt="refugee protest"></div>
-    <div class="landscape friends"><img src="friends/reality-winner.jpg" alt="Reality Leigh Winner"></div>
-    <div class="landscape friends"><img src="friends/roma.png" alt="Roma People"></div>
-    <div class="big friends"><img src="friends/chelsea-resists.jpg" alt="Chelsea Resists"></div>
-    <div class="landscape friends"><img src="friends/refugees.png" alt="Refugees"></div>
-    <div class="landscape friends"><img src="friends/Hong_Kong_anti-extradition_bill_protest.jpg" alt="Hong Kong anti extradition bill protest"></div>
-    <div class="landscape friends"><img src="friends/HandsOffAmazon.png" alt="Hands Off Amazon"></div>
+    <div class="portrait assist"><img src="assist/SahrawiPeople.jpg" alt="We Stand for Sahrawi People"></div>
+    <div class="portrait assist"><img src="assist/AnarkiaBoladona.png" alt="Anarkia Boladona: Solidarity with Brazilian Women"></div>
+    <div class="portrait assist"><img src="assist/Glenn_Greenwald.png" alt="Glenn_Greenwald"></div>
+    <div class="landscape assist"><img src="assist/tanzania-lgbt.png" alt="tanzania lgbt"></div>
+    <div class="big assist"><img src="assist/Green-Wave.jpg" alt="Green Wave"></div>
+    <div class="landscape assist"><img src="assist/2019-07-21-russia-moscow-protests.jpg" alt="Russia Moscow Protest 2019"></div>
+    <div class="landscape assist"><img src="assist/barrettbrown-you-are-not-alone.png" alt="Barrett Brown"></div>
+    <div class="portrait assist"><img src="assist/brazil-lgbt.png" alt="LGBT Brazil"></div>
+    <div class="landscape assist"><img src="assist/british-muslims.png" alt="British Muslims"></div>
+    <div class="landscape assist"><img src="assist/chelsea-manning.jpg" alt="Chelsea Manning"></div>
+    <div class="landscape assist"><img src="assist/CaroleCadwalladr.png" alt="Carole Cadwalladr"></div>
+    <div class="big assist"><img src="assist/GretaThunberg.jpg" alt="Greta Thunberg"></div>
+    <div class="landscape assist"><img src="assist/dakota-access-protest-v2.jpg" alt="dakota access pipeline protest."></div>
+    <div class="landscape assist"><img src="assist/orlando-shooting.jpg" alt="orlando shooting"></div>
+    <div class="landscape assist"><img src="assist/refugee-boat2.png" alt="refugee boat"></div>
+    <div class="landscape assist"><img src="assist/snowden.png" alt="Edward Snowden"></div>
+    <div class="landscape assist"><img src="assist/LGBTPoland.png" alt="LGBT Poland"></div>
+    <div class="landscape assist"><img src="assist/sami.png" alt="Sami People"></div>
+    <div class="big assist"><img src="assist/Brazil.jpg" alt="Brazil"></div>
+    <div class="landscape assist"><img src="assist/refugee-camp.png" alt="refugee camp"></div>
+    <div class="landscape assist"><img src="assist/victims-pulse-orlando-shooting.jpg" alt="Orlando shooting victims"></div>
+    <div class="landscape assist"><img src="assist/pax-ritual-for-syria.jpg" alt="Pax ritual for Syria"></div>
+    <div class="landscape assist"><img src="assist/refugee-protest.jpg" alt="refugee protest"></div>
+    <div class="landscape assist"><img src="assist/reality-winner.jpg" alt="Reality Leigh Winner"></div>
+    <div class="landscape assist"><img src="assist/roma.png" alt="Roma People"></div>
+    <div class="big assist"><img src="assist/chelsea-resists.jpg" alt="Chelsea Resists"></div>
+    <div class="landscape assist"><img src="assist/refugees.png" alt="Refugees"></div>
+    <div class="landscape assist"><img src="assist/Hong_Kong_anti-extradition_bill_protest.jpg" alt="Hong Kong anti extradition bill protest"></div>
+    <div class="landscape assist"><img src="assist/HandsOffAmazon.png" alt="Hands Off Amazon"></div>
+
+    <div class="portrait target"><img src="targets/Michael-Botticelli.jpg" alt="Michael Botticelli"></div>
+    <div class="landscape target"><img src="targets/wohi-mit-opi.jpg" alt="Wohi mit opi"></div>
+    <div class="landscape target"><img src="targets/Kim-Jong-un.jpg" alt="Kim Jong un"></div>
+    <div class="landscape target"><img src="targets/shell.png" alt="Shell"></div>
+    <div class="landscape target"><img src="targets/climate2015-01.jpg" alt="Paris Climate Conference 2015"></div>
+    <div class="big target"><img src="targets/Bjorn.jpg" alt="Bjorn"></div>
+    <div class="landscape target"><img src="targets/Mark-Zuckerberg.png" alt="Mark Zuckerberg"></div>
+    <div class="big target"><img src="targets/bolsonaro.png" alt="Jair Bolsonaro"></div>
+    <div class="landscape target"><img src="targets/boris.jpeg" alt="Boris Johnson"></div>
+    <div class="landscape target"><img src="targets/corbyn.jpeg" alt="Jeremy Corbyn"></div>
+    <div class="landscape target"><img src="targets/untitled1.jpg" alt="Untitled"></div>
+    <div class="big target"><img src="targets/dollar-bill.jpg" alt="Dollar bill"></div>
+    <div class="landscape target"><img src="targets/dugin.jpg" alt="Aleksander Dugin"></div>
+    <div class="landscape target"><img src="targets/farge.jpeg" alt="Nigel Farage"></div>
+    <div class="big target"><img src="targets/gazprom.png" alt="Gazprom"></div>
+    <div class="landscape target"><img src="targets/untitled2.jpg" alt="Untitled"></div>
+    <div class="landscape target"><img src="targets/generation-identity.png" alt="Generation Identity"></div>
+    <div class="landscape target"><img src="targets/golden-dawn.jpeg" alt="Golden Dawn"></div>
+    <div class="landscape target"><img src="targets/trump-ghost.jpg" alt="Donald Trump"></div>
+    <div class="landscape target"><img src="targets/untitled3.jpg" alt="Untitled"></div>
+    <div class="landscape target"><img src="targets/murdochs.jpg" alt="Rupert Murdoch and sons"></div>
+    <div class="big target"><img src="targets/omv.jpg" alt="OMV"></div>
+    <div class="landscape target"><img src="targets/putin.jpg" alt="Vladimir Putin"></div>
+    <div class="landscape target"><img src="targets/untitled4.jpg" alt=""></div>
+    <div class="landscape target"><img src="targets/spring-on-mars.jpg" alt="Spring on Mars and Jupiter"></div>
+    <div class="landscape target"><img src="targets/target-lloyd-webber.png" alt="Lloyd Webber"></div>
+    <div class="big target"><img src="targets/target01.jpg" alt="Bankers"></div>
+    <div class="landscape target"><img src="targets/trump-baby.jpg" alt="Trump baby"></div>
+    <div class="landscape target"><img src="targets/untitled5.jpg" alt="Untitled"></div>
+    <div class="portrait target"><img src="targets/target-bee-killer.jpg" alt="Bee killer"></div>
     </div>
   </body>
 </html>
