Updated header, manual pages and home img.

--- a/public/index.html
+++ b/public/index.html
@@ -25,18 +25,21 @@
       <button id="memes">Memes</button>
      
     </nav>
-    <div id="homeImg"><img src="manual/op-intruder-logo.png" alt= "logo"></div>
+    <div id="homeImg"><img src="about/OPERATION-INTRUDER.png" alt= "logo"></div>
     <div  class= "container">
-      <div class="landscape manual"><img src="manual/ce5-manual.png" alt="Abduction/CE5 Sigil"></div>
-      <div class="landscape manual"><img src="manual/ontological-shock-manual.png" alt= "Ontological Shock" ></div>
-      <div class="landscape manual"><img src="manual/not-alone-manual.png" alt= "You Are Not Alone"></div>
-      <div class="landscape manual"><img src="manual/vajra-manual.png" alt= "Vajra Up The Masses"></div>
-      <div class="landscape manual"><img src="manual/Yggdrasil-manual.png" alt= "Yggdrasil Bindrune"></div>
+      <div class="landscape manual"><img src="manual/CE5.png" alt="Abduction/CE5 Sigil"></div>
+      <div class="landscape manual"><img src="manual/ontological-shock.png" alt= "Ontological Shock" ></div>
+      <div class="landscape manual"><img src="manual/you-are-not-alone.png" alt= "You Are Not Alone"></div>
+      <div class="landscape manual"><img src="manual/vajra.png" alt= "Vajra Up The Masses"></div>
+      <div class="landscape manual"><img src="manual/strength.png" alt= "Strength"></div>
+      <div class="landscape manual"><img src="manual/protection.png" alt= "Protection"></div>
+      <div class="landscape manual"><img src="manual/earth.png" alt= "Earth"></div>
+      <div class="landscape manual"><img src="manual/consciousness.png" alt= "Consciousness"></div>
 
     <div class="big art"><img src="art/quayin-al-kindi-intruder-abduction.jpg" alt="Intruder Abruction by Quayin Al Kindi"></div>
     <div class="portrait art"><img src="art/Akenisoxuz-XI.jpg" alt="Akenisoxuz-XI"></div>
     <div class="portrait art"><img src="art/ce5-alien.jpg" alt="CE5 Alien"></div>
-    <div class="portrait art"><img src="art/dkmu.jpg" alt="DKMU"></div>
+    <div class="portrait art"><img src="art/dkmu.jpg" alt="DKMU by Sergey Vasíliev"></div>
     <div class="portrait art"><img src="art/easter.jpg" alt="OpIntruder Easter by Agent V"></div>
     <div class="portrait art"><img src="art/ce5-target.png" alt="CE5 target"></div>
     <div class="big art"><img src="art/ufo.jpg" alt="UFO"></div>
