Edited paragrapth styles.

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
         <main>
           <section aria-label='Introduction'>
           <h1>OPERATION INTRUDER</h1>     
-          <p>Recent sociopolitical events bring both hope and despair. <br>
+          <p>Recent sociopolitical events bring both hope and despair.
               It seems like the consciousness of people around the globe rises higher than before and at the 
               same time the tyranny and oppression carries on catching up. We think we need 
               to up the game. If the people who make decisions do not stop thinking selfishly 
