Added footer with social media links.

--- a/public/index.html
+++ b/public/index.html
@@ -219,5 +219,22 @@
     <div class="landscape target"><img src="targets/untitled5.jpg" alt="Untitled"></div>
     <div class="portrait target"><img src="targets/target-bee-killer.jpg" alt="Bee killer"></div>
     </div>
+    <footer>
+      <p> 
+        <h3>Social Media</h3>
+          <a src= 'https://www.facebook.com/opintruder/?ref=aymt_homepage_panel&eid=ARCLCRXyFP5U50gShlkv4agF_m1Sszd7UUxhhK27w6vNvd8Doef_YXI5Eys3YPuxmRe-EqZa_0D4LQw1'>FB Page</a>
+          <a src= 'https://www.facebook.com/groups/opintruder/'>FB Group</a>
+          <a src='https://www.deviantart.com/operationintruder'>Deviantart</a>
+      </p>
+      <p>
+        <h3>Friends</h3>
+        <a src='https://www.youtube.com/watch?v=PM1WCimjWxM&list=PLP3RpM52z2ch53AZrSc5tjTXdfqTars7x&index=1'>DanaVarahi</a>
+        <a src='https://www.facebook.com/groups/chaosmagickia/'>KIA</a>
+        <a src='https://www.dkmu.org/index2.html'>DKMU</a>
+        <a src='http://zenseiderz.org/'>ZenseiderZ</a>
+        <a src='https://obotix.bandcamp.com/'>ObotiX</a>
+      </p>
+     
+    </footer>
   </body>
 </html>
